// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

option optimize_for = LITE_RUNTIME;

message ServerExperimentData {
  message NamespacedExperimentInfo {
    optional string namespace = 1;
    repeated int32 experiment_id = 2 [packed = true];
  }
  repeated NamespacedExperimentInfo namespaced_experiment_info = 1;
}
